[metadata]
name = PythonKebaClient-senfomat
version = 0.0.1
author = Christian Froemmel
author_email = senfomat@gmail.com
description = Package for communicating with KEBA-Wallboxes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senfomat/PythonKebaClient
project_urls =
    Bug Tracker = https://github.com/senfomat/PythonKebaClient/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pymodbus>2.5

[options.packages.find]
where = src
